gcc/testsuite/algol68/compile/error-coercion-2.a68
# { dg-options "-fstropping=upper" }  #

# This is Example 4.2.6c in McGETTRICK[78].  #
BEGIN []STRUCT([]INT a) r = (1,2,3); # { dg-error "cannot be coerced" } #
      SKIP
END
